--- a/.github/workflows/tatouscan_ci.yml
+++ b/.github/workflows/tatouscan_ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Install TAtouScan
       run: |
         pip install .
-        tatouscan -h
+        tatouscan --help
 
     - name: Lint with flake8
       run: |
