--- a/.github/workflows/tatouscan_ci.yml
+++ b/.github/workflows/tatouscan_ci.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        mamba install pytest pytest-cov
+        pip install pytest pytest-cov
         pytest --cov=tatouscan --cov-report=html --cov-report=xml
 
     # - name: Generate coverage badge
