--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,8 @@
+[build-system]
+requires = ["setuptools>=61.0.0"]
+build-backend = "setuptools.build_meta"
+
+
 [project]
 name = "TAtouScan"
 description = " A command-line tool for identifying toxin-antitoxin (TA) systems in genomes and metagenomes. "
